...
                                                </constraints>
                                            </imageView>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" adjustsFontSizeToFit="NO" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="leT-tl-Uoa" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextFiel
                                                <rect key="frame" x="42" y="210" width="243" height="40"/>
                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                </userDefinedRuntimeAttributes>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="chv-co-HG7" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
                                                <rect key="frame" x="44" y="260" width="241" height="40"/>
                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                                <state key="normal" title="Login">
                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                <inset key="titleEdgeInsets" minX="-5" minY="0.0" maxX="0.0" maxY="0.0"/>
                                <inset key="imageEdgeInsets" minX="-20" minY="0.0" maxX="0.0" maxY="0.0"/>
                                <state key="normal" title="Sign up with Google" image="google">
                                    <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                <state key="normal" title="Sign up with email">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                <inset key="titleEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
                                <state key="normal" title="Sign up with Facebook" image="fb"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
...
                                <inset key="titleEdgeInsets" minX="-5" minY="0.0" maxX="0.0" maxY="0.0"/>
                                <inset key="imageEdgeInsets" minX="-20" minY="0.0" maxX="0.0" maxY="0.0"/>
                                <state key="normal" title="Sign up with Twitter" image="twitter"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
...
                                <color key="backgroundColor" red="0.070588235289999995" green="0.078431372550000003" blue="0.1529411765" alpha="1" colorSpace="calibratedRGB"/>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="First Name" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lwJ-Pb-Uuq" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
                                <rect key="frame" x="35" y="141" width="250" height="40"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Last Name" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ytu-OA-was" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
                                <rect key="frame" x="35" y="197" width="250" height="40"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Confirm Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4By-p0-K1o" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
                                <rect key="frame" x="35" y="197" width="250" height="40"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <color key="value" red="0.72156862749999995" green="0.73725490199999999" blue="0.90588235289999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    </userDefinedRuntimeAttribute>
                                    <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Mobile"/>
                                </userDefinedRuntimeAttributes>
                            </textField>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                <state key="normal" title="SIGN IN">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                <state key="normal" title="SIGN UP">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RI9-u4-C1n" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Profile" image="profile" selectedImage="profile" id="wAb-wm-Lit"/>
                    <toolbarItems/>
