...
        vc.content_type = "post"
        self.delegate?.push(VC: vc)
    }
    
    @objc func shareAction(_ sender : UIButton){
        
        let shareAlert = UIAlertController(title: "Select the social network you wish to share post on.", message: nil , preferredStyle: .actionSheet)
        shareAlert.modalPresentationStyle = .popover
        shareAlert.popoverPresentationController?.sourceView = self.viewContainingController()?.view
        shareAlert.popoverPresentationController?.sourceRect = CGRect(x: 0, y: 0, width: 1.0, height: 1.0)
        if NetworkController.front_user_id != "0"{
            shareAlert.addAction(UIAlertAction(title: "Share on Outdoors360", style: .default , handler: {_ in
                let alert = UIAlertController(title: "Share Post on Outdoors360", message: nil, preferredStyle: .alert)
...
                })
                alert.addAction(UIAlertAction(title: "Cancel", style: .destructive, handler: nil))
                self.delegate?.present(VC: alert)
            }))
        }
        
        shareAlert.addAction(UIAlertAction(title: "Share to Social Network", style: .default , handler: {_ in
            
            let num = NetworkController.shared.random(digits: 8)
            let activityVC =  UIActivityViewController(activityItems: ["\(NetworkController.shareURL)\(String(num))\(self.post.id!)", self.singleImage?.image as Any], applicationActivities: nil)
            activityVC.modalPresentationStyle = .popover
            activityVC.excludedActivityTypes = [UIActivity.ActivityType.mail, UIActivity.ActivityType.message]
            self.delegate?.present(VC: activityVC)
...
