...
    }
    @IBAction func Tag_Btn(_ sender : UIButton){
        print("tag")
    }
    
    @IBAction func Share_Btn(_ sender : UIButton){
        print("share")
    }
  
    
    
}

