...
        refreshControl.addTarget(self, action: #selector(Refresh_Feeds(_:)) , for: .valueChanged)
        self.setImageForNavigation(imageFor: #imageLiteral(resourceName: "navigationHeader"))
        
        tableView.register(UINib( nibName: "SuggestedTableViewCell", bundle: nil), forCellReuseIdentifier: "suggestTableCell")
        tableView.register(UINib(nibName: "Feed_Cell", bundle: nil), forCellReuseIdentifier: Feed_Cell.identifier)
        tableView.isAccessibilityElement = true
        tableView.accessibilityIdentifier = "feedsList"
        //Share App Link Label
        let tapShare = UITapGestureRecognizer(target: self, action: #selector(shareRef(_:)))
        tapShare.numberOfTapsRequired = 1
        self.shareLabel.isUserInteractionEnabled = true
        self.shareLabel.addGestureRecognizer(tapShare)
        
...
