...
            self.shareBtn.isHidden = true
            self.settingBtn.isHidden = true
            self.userImage.image = #imageLiteral(resourceName: "Logo")
            self.userName.isHidden = true
            
        }else{
            self.logOutBtn.setTitle("Sign out", for: .normal)
            self.settingBtn.isHidden = true
            self.shareBtn.snp.updateConstraints { (mk) in
                mk.top.equalTo(self.settingBtn.snp.bottom).offset(8)
                mk.height.equalTo(35)
            }
            self.shareBtn.isHidden = false
...
